<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="#FFFFFF"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:background="#FFFFFF"
        android:id="@+id/logo"
        android:layout_height="175dp"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:fontFamily="@font/quicksand"
        android:id="@+id/loginTitle"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:text="@string/loginTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:fontFamily="@font/quicksand"
        android:id="@+id/loginInstructions"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_width="250sp"
        android:text="@string/loginInstructions"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <EditText
        android:ems="10"
        android:fontFamily="@font/quicksand"
        android:hint="@string/emailEditText"
        android:id="@+id/emailEditText"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_width="250sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginInstructions" />

    <EditText
        android:ems="10"
        android:fontFamily="@font/quicksand"
        android:hint="@string/passwordEditText"
        android:id="@+id/passwordEditText"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_width="250sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <Button
        android:backgroundTint="#08cbff"
        android:fontFamily="@font/quicksand"
        android:id="@+id/loginButton"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:text="@string/loginButton"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>